# Hleeb

./: .swiftlint.yml  Brewfile  CMakeLists.txt  LICENSE  README.md  build.sh  test.sh  toolchain-arm-none-eabi.cmake  uswift
Sources/: CMakeLists.txt  boot.S  kernel.c  linker.ld
Sources/KernelKit/: CMakeLists.txt  MMIO.swift  sum.swift
